[package]
name = "bjim-cli"
version = "0.0.1"
authors = ["fluo10 <fluo10.dev@fireturtle.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { package = "bjim-lib", path = "../lib" }
chrono = { version = "0.4.19" }
clap = { version = "3.0.1", features = ["derive"] }