[package]
name = "bjim-cli"
version = "0.1.1"
authors = ["fluo10 <fluo10.dev@fireturtle.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bjim"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.54"
env_logger = "0.9.0"
lib = { package = "bjim-lib", path = "../lib" }
chrono = { version = "0.4.19" }
clap = { version = "3.0.1", features = ["derive"] }
git2 = { version = "0.13", default-features = false }
