[package]
name = "bjim-lib"
version = "0.0.1"
authors = ["fluo10 <fluo10.dev@fireturtle.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
git2 = "0.13"
dirs = "4.0.0"
walkdir = "2.3.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
regex = "1.5"