[package]
name = "bjim-lib"
version = "0.3.0"
authors = ["fluo10 <fluo10.dev@fireturtle.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.54"
chrono = { version = "0.4.19", features = ["serde"] }
dirs = "4.0.0"
git2 = { version = "0.13", default-features = false }
log = "0.4"
once_cell = "1.9.0"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
thiserror = "1.0.30"
toml = "0.5.8"
walkdir = "2.3.2"
