[package]
name = "bjim-md-macros"
version = "0.0.1"
authors = ["fluo10 <fluo10.dev@fireturtle.net>"]
edition = "2021"
description = "Markdown parser for bjim"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.54"
thiserror = "1.0.30"

