[package]
name = "bjim-md-macros-derive"
version = "0.0.1"
authors = ["fluo10 <fluo10.dev@fireturtle.net>"]
edition = "2021"
description = "Markdown parser for bjim"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.54"
quote = "1.0"
syn = "1.0"
thiserror = "1.0.30"

